NEXT-20760 - Stop e2e and phpunit jobs on first error in merge train

--- a/.gitlab/lib/rules.yml
+++ b/.gitlab/lib/rules.yml
@@ -23,6 +23,10 @@
         if: '$CI_MERGE_REQUEST_EVENT_TYPE == null
           || $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train"'
 
-
+    # match if long running but only if failure is allowed
+    long-running-allow-failure:
+      if: '$ALLOW_FAILURE == "true" && (
+              $CI_MERGE_REQUEST_EVENT_TYPE == null
+           || $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train")'
 
 
