--- a/.gitlab/templates/plugin-cloud-jobs.yml
+++ b/.gitlab/templates/plugin-cloud-jobs.yml
@@ -19,7 +19,7 @@ deploy to cloud staging:
   when: manual
   inherit:
     variables: false
-  trigger: shopware-cloud/project-template
+  trigger: shopware/6/product/saas
   variables:
     VERSION_ORIGIN_REF: '$CI_MERGE_REQUEST_PROJECT_PATH!$CI_MERGE_REQUEST_IID'
     CUSTOM_VERSION: '$CLOUD_COMPOSER_REF:dev-$CI_COMMIT_BRANCH$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME'
