--- a/.gitlab/lib/rules.yml
+++ b/.gitlab/lib/rules.yml
@@ -9,7 +9,7 @@
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::skip.*/ && $CI_JOB_STAGE == "deploy"
           || $CI_MERGE_REQUEST_LABELS =~ /.*visual::skip.*/ && $CI_JOB_STAGE == "visual"'
         when: never
-    # execute job if the all label for the stage is set. This should also trigger long running jobs
+    # execute job if the all label for the stage is set
     run:
         if: '$CI_MERGE_REQUEST_LABELS =~ /.*lint::all.*/ && $CI_JOB_STAGE == "lint"
           || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
@@ -18,6 +18,16 @@
           || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
           || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
           || $CI_MERGE_REQUEST_LABELS =~ /.*visual::all.*/ && $CI_JOB_STAGE == "visual"'
+    # execute job if the all label for the stage is set and ALLOW_FAILURE == true
+    run-allow-failure:
+          if: '$ALLOW_FAILURE == "true" && (
+                 $CI_MERGE_REQUEST_LABELS =~ /.*lint::all.*/ && $CI_JOB_STAGE == "lint"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*unit::all.*/ && $CI_JOB_STAGE == "unit"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*E2E::all.*/ && $CI_JOB_STAGE == "E2E"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*security::all.*/ && $CI_JOB_STAGE == "security"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*build::all.*/ && $CI_JOB_STAGE == "build"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*deploy::all.*/ && $CI_JOB_STAGE == "deploy"
+              || $CI_MERGE_REQUEST_LABELS =~ /.*visual::all.*/ && $CI_JOB_STAGE == "visual")'
     # condition for executing in merge trains and non merge request pipelines
     long-running:
         if: '$CI_MERGE_REQUEST_EVENT_TYPE == null
