NEXT-20667 - fix non-working administration when FRW should start in major

--- a/.gitlab/stages/03-e2e.yml
+++ b/.gitlab/stages/03-e2e.yml
@@ -96,12 +96,12 @@ E2E install NL:
         CYPRESS_CACHE_FOLDER: $CI_PROJECT_DIR/.Cypress
     parallel:
       matrix:
-        - FEATURE_ALL: ''
+        - FEATURE_ALL: 'false'
         - FEATURE_ALL: 'major'
           ALLOW_FAILURE: 'true'
     rules:
         - !reference [ .rules, skip ]
-        - !reference [ .rules, run-allow-failure, if ]
+        - if: !reference [ .rules, run-allow-failure, if ]
           allow_failure: true
         - !reference [ .rules, run ]
         - if: !reference [ .rules, long-running-allow-failure, if ]
