--- a/composer.json
+++ b/composer.json
@@ -359,6 +359,10 @@
         "admin:unit": [
             "@php bin/console framework:schema -s 'entity-schema' src/Administration/Resources/app/administration/test/_mocks_/entity-schema.json",
             "@npm:admin run unit"
+        ],
+        "admin:unit:watch": [
+            "@php bin/console framework:schema -s 'entity-schema' src/Administration/Resources/app/administration/test/_mocks_/entity-schema.json",
+            "@npm:admin run unit-watch"
         ]
     },
     "autoload": {
