--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,8 @@
         "doctrine/dbal": "~2.13.8",
         "doctrine/inflector": "~1.4.4",
         "shopwarelabs/dompdf": "1.0.3",
+        "tecnickcom/tcpdf": "6.4.4",
+        "setasign/fpdi": "2.3.6",
         "elasticsearch/elasticsearch": "7.16.0",
         "enqueue/dbal": "~0.10.15",
         "enqueue/redis": "~0.10.9",
