--- a/composer.json
+++ b/composer.json
@@ -110,6 +110,7 @@
         "symfony/event-dispatcher-contracts": "2.2.0",
         "symfony/filesystem": "~5.4.0",
         "symfony/finder": "~5.4.0",
+        "symfony/form": "~5.4.0",
         "symfony/framework-bundle": "~5.4.1",
         "symfony/http-foundation": "~5.4.1",
         "symfony/http-kernel": "~5.4.2",
