NEXT-20971 - Overwrite redis adapter for cache pools

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -55,7 +55,7 @@ parameters:
         - src/Elasticsearch/*Test.php
         - src/Storefront/*Test.php
         - src/Administration/Test/Controller/*.php
-
+        - src/Core/Framework/Adapter/Cache/ShopwareRedisAdapter.php
         # node_modules
         - src/**/node_modules/*
 
