NEXT-20367 - Add phpstan rule for deprecations

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -282,3 +282,8 @@ services:
         class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\Decoratable\DecoratableNotInstantiatedRule
         tags:
             - phpstan.rules.rule
+
+    -
+        class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\Deprecation\DeprecatedMethodsThrowDeprecationRule
+        tags:
+            - phpstan.rules.rule
