NEXT-21454 - Use doctrine annotation parser

--- a/vendor-bin/roave-backward-compatibility-check/composer.json
+++ b/vendor-bin/roave-backward-compatibility-check/composer.json
@@ -26,7 +26,8 @@
         }
     },
     "require": {
-        "cweagans/composer-patches": "^1.7"
+        "cweagans/composer-patches": "^1.7",
+        "doctrine/annotations": "^1.13"
     },
     "extra": {
         "patches": {
