--- a/composer.json
+++ b/composer.json
@@ -163,10 +163,10 @@
         "opis/json-schema": "~1.0.19",
         "phpdocumentor/reflection-docblock": "^5.3.0",
         "phpstan/extension-installer": "^1.1.0",
-        "phpstan/phpstan": "1.3.0",
-        "phpstan/phpstan-doctrine": "1.0.2",
-        "phpstan/phpstan-phpunit": "1.0.0",
-        "phpstan/phpstan-symfony": "1.0.4",
+        "phpstan/phpstan": "~1.6.8",
+        "phpstan/phpstan-doctrine": "~1.3.4",
+        "phpstan/phpstan-phpunit": "~1.1.1",
+        "phpstan/phpstan-symfony": "~1.1.8",
         "phpunit/php-code-coverage": "~9.2.14",
         "phpunit/phpunit": "~9.5.17",
         "smalot/pdfparser": "~0.14.0",
