--- a/composer.json
+++ b/composer.json
@@ -282,11 +282,9 @@
             "@php src/Core/DevOps/StaticAnalyze/PHPStan/phpstan-bootstrap.php",
             "phpstan analyze --memory-limit=2G"
         ],
-        "psalm": "psalm --config=psalm.xml --threads=4",
         "bc-check": "roave-backward-compatibility-check --from=$(git tag -l --sort -version:refname | head -n 1)",
         "static-analyze": [
-            "@phpstan src/",
-            "@psalm src/"
+            "@phpstan src/"
         ],
         "phpunit": [
             "phpunit"
