--- a/.gitlab/stages/08-performance.yml
+++ b/.gitlab/stages/08-performance.yml
@@ -1,6 +1,6 @@
 # requires /.gitlab/base.yml
 
-# performance stage - This files contains all jobs belonging to the performance stage
+# performance stage - This files contains all jobs belonging to the performance stage.
 
 Lighthouse (Administration):
     extends: .base
@@ -34,18 +34,56 @@ Lighthouse (Storefront):
     extends: .base
     stage: unit
     needs: []
+    allow_failure: true
     services:
         -   name: mariadb:10.3
             alias: database
     variables:
         APP_ENV: prod
         DD_API_KEY: "$DATADOG_API_KEY"
+        ALLOW_FAILURE: 'true'
     rules:
-        - allow_failure: true
         - !reference [ .rules, skip ]
         - !reference [ .rules, run ]
-        # always execute in merge train. PHP could in theory affect the admin jest tests.
-        - !reference [ .rules, long-running ]
+        - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
+          when: never
+        - changes:
+              - 'src/Storefront/**/*'
+              - .gitlab/stages/02-unit.yml
+          when: never
+        - when: always
+    script:
+        - APP_ENV=prod bin/console framework:demodata
+        - APP_ENV=prod bin/console dal:refresh:index
+        - cd $STOREFRONT_PATH
+        - node createlighthouserc.js
+        - node node_modules/@lhci/cli/src/cli.js collect --config=$PROJECT_ROOT/build/artifacts/lighthouse-storefront-config/lighthousercNotLoggedIn.json
+        - node node_modules/@lhci/cli/src/cli.js collect --additive=true --config=$PROJECT_ROOT/build/artifacts/lighthouse-storefront-config/lighthousercNotLoggedInMobile.json
+        - node node_modules/@lhci/cli/src/cli.js collect --additive=true --config=$PROJECT_ROOT/build/artifacts/lighthouse-storefront-config/lighthousercLoggedIn.json
+        - node node_modules/@lhci/cli/src/cli.js collect --additive=true --config=$PROJECT_ROOT/build/artifacts/lighthouse-storefront-config/lighthousercLoggedInMobile.json
+        - node lighthouse-tests.js
+    coverage: '/^\s?All files[^|]*\|[^|]*\s+([\d\.]+)/'
+    artifacts:
+        when: always
+        paths:
+            - build/artifacts
+
+Lighthouse Server (Storefront):
+    extends: .base
+    stage: unit
+    needs: []
+    allow_failure: true
+    services:
+        -   name: mariadb:10.3
+            alias: database
+    variables:
+        APP_ENV: prod
+        DD_API_KEY: "$DATADOG_API_KEY"
+        ALLOW_FAILURE: 'true'
+    rules:
+        - !reference [ .rules, skip ]
+        - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
+          when: never
         - changes:
               - 'src/Storefront/**/*'
               - .gitlab/stages/02-unit.yml
