--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -53,6 +53,7 @@
             <directory suffix=".php">src/Core/Framework/Test</directory>
             <directory suffix=".php">src/Core/Content/Test</directory>
             <directory suffix=".php">src/Core/Checkout/Test</directory>
+            <directory suffix=".php">src/Core/DevOps/StaticAnalyze</directory>
             <directory suffix=".php">src/Core/DevOps/Test</directory>
             <directory suffix=".php">src/Core/Maintenance/Test</directory>
             <directory suffix=".php">src/Core/Migration/Test</directory>
