--- a/.gitlab/stages/06-deploy.yml
+++ b/.gitlab/stages/06-deploy.yml
@@ -78,4 +78,4 @@ deploy to cloud staging:
     trigger: shopware/6/product/saas
     variables:
         VERSION_ORIGIN_REF: '$CI_MERGE_REQUEST_PROJECT_PATH!$CI_MERGE_REQUEST_IID'
-        CUSTOM_VERSION: 'shopware/platform:dev-${CI_COMMIT_BRANCH}${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME} as 6.4.x-dev'
+        CUSTOM_VERSION: 'shopware/platform:dev-${CI_COMMIT_BRANCH}${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME} as 6.4.x-dev;swag/saas-rufus:dev-trunk'
