--- a/.gitlab/lib/datadog.yml
+++ b/.gitlab/lib/datadog.yml
@@ -1,7 +1,9 @@
 .upload-junit-xml:
     after_script:
-        - JUNIT_FILES="$(find . -maxdepth 5 -iname "*.junit.xml")"
         - >
-          if [[ -n "$JUNIT_FILES" ]]; then
-            npx @datadog/datadog-ci junit upload --service shopware/platform $JUNIT_FILES >/dev/null;
+          if [[ -n "$DD_CI_UPLOAD" ]]; then
+            JUNIT_FILES="$(find . -maxdepth 5 -iname "*.junit.xml")"
+            if [[ -n "$JUNIT_FILES" ]]; then
+              npx @datadog/datadog-ci junit upload --service shopware/platform $JUNIT_FILES >/dev/null;
+            fi
           fi
