NEXT-21873 - Fixes npm peerDependencies problems by locking the node version in ci

--- a/.gitlab/base.yml
+++ b/.gitlab/base.yml
@@ -18,7 +18,7 @@ variables:
     APP_SECRET: devsecret
     SHOPWARE_ES_HOSTS: elasticsearch:9200
     BLUE_GREEN_DEPLOYMENT: 1
-    NODE_VERSION: 16
+    NODE_VERSION: "16.14.0"
 
 # for jobs which should run on each MR/Pipeline
 .base:
