--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -61,7 +61,6 @@
     "date-fns-tz": "1.3.4",
     "dompurify": "2.3.6",
     "eslint-friendly-formatter": "4.0.1",
-    "eslint-plugin-file-progress": "1.2.0",
     "flatpickr": "4.6.13",
     "flush-promises": "1.0.2",
     "fork-ts-checker-webpack-plugin": "6.5.2",
@@ -126,9 +125,10 @@
     "dir-compare": "1.7.3",
     "docdash": "1.2.0",
     "dotenv": "8.0.0",
-    "eslint": "7.10.0",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-import-resolver-webpack": "0.13.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-file-progress": "^1.2.1",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-inclusive-language": "2.2.0",
@@ -139,7 +139,7 @@
     "eslint-plugin-twig-vue": "file:twigVuePlugin",
     "eslint-plugin-vue": "7.9.0",
     "eslint-plugin-vuejs-accessibility": "0.7.1",
-    "eslint-webpack-plugin": "3.0.1",
+    "eslint-webpack-plugin": "2.6.0",
     "eventsource-polyfill": "0.9.6",
     "expose-loader": "0.7.5",
     "express": "4.18.1",
@@ -164,9 +164,9 @@
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "stylelint": "14.8.2",
-    "stylelint-config-standard": "18.3.0",
+    "stylelint-config-standard": "25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-webpack-plugin": "0.10.5",
+    "stylelint-webpack-plugin": "2.4.0",
     "svg-inline-loader": "0.8.2",
     "typescript": "4.6.4",
     "url-loader": "2.1.0",
