NEXT-21930 - Fix phpstan

--- a/.gitlab/stages/01-lint.yml
+++ b/.gitlab/stages/01-lint.yml
@@ -97,7 +97,35 @@ Stylelint (Storefront):
         reports:
             junit: src/Storefront/Resources/app/storefront/stylelint.junit.xml
 
-PHP analysis:
+PHP static analysis:
+    extends: .base-no-setup
+    variables:
+        GIT_DEPTH: 0
+        FEATURE_ALL: "major" # execute all destructive migrations
+    stage: lint
+    image: shopware/development:7.4-composer-2
+    services:
+        -   name: mariadb:10.4
+            alias: database
+            entrypoint: [ "sh", "-c", "docker-entrypoint.sh $MYSQL_CMD" ]
+    rules:
+        - !reference [.rules, skip]
+        - !reference [.rules, run]
+        - changes:
+              - phpstan.neon.dist
+              - composer.json
+              - phpstan-baseline.neon
+              - '**/*.php'
+    before_script:
+        - composer update --no-interaction
+        - composer run init:db
+    script:
+        - composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
+    artifacts:
+        reports:
+            codequality: phpstan-report.json
+
+PHP lint:
     extends: .base-no-setup
     variables:
         GIT_DEPTH: 0
@@ -107,25 +135,18 @@ PHP analysis:
         - !reference [.rules, skip]
         - !reference [.rules, run]
         - changes:
-              - phpstan.neon.dist
               - composer.json
-              - phpstan-baseline.neon
               - .bc-exclude.php
               - 'changelog/**/*.md'
               - 'src/**/snippet/**/*.json'
               - '**/*.php'
     before_script:
-        - composer install --quiet --no-interaction
+        - composer update --no-interaction
     script:
         - composer run ecs -- src --no-progress-bar
-        - composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
         - composer run lint:changelog
         - composer run lint:snippets
         - composer run bc-check
-    artifacts:
-        reports:
-            codequality: phpstan-report.json
-
 
 NPM CI:
     extends: .base-no-setup
