--- a/composer.json
+++ b/composer.json
@@ -163,13 +163,14 @@
         "opis/json-schema": "~1.0.19",
         "phpdocumentor/reflection-docblock": "^5.3.0",
         "phpstan/extension-installer": "^1.1.0",
-        "phpstan/phpstan": "~1.6.8",
-        "phpstan/phpstan-doctrine": "~1.3.4",
-        "phpstan/phpstan-phpunit": "~1.1.1",
-        "phpstan/phpstan-symfony": "~1.1.8",
+        "phpstan/phpstan": "1.7.10",
+        "phpstan/phpstan-doctrine": "1.3.4",
+        "phpstan/phpstan-phpunit": "1.1.1",
+        "phpstan/phpstan-symfony": "1.1.8",
         "phpunit/php-code-coverage": "~9.2.14",
         "phpunit/phpunit": "~9.5.17",
         "smalot/pdfparser": "~0.14.0",
+        "staabm/phpstan-dba": "0.2.29",
         "symfony/browser-kit": "~5.4.0",
         "symfony/css-selector": "~5.4.0",
         "symfony/dom-crawler": "~5.4.0",
@@ -198,7 +199,7 @@
             "ln -sf $PWD/bin/pre-push .git/hooks/pre-push"
         ],
         "init:db": [
-            "@php bin/console system:install --drop-database --basic-setup --force"
+            "@php bin/console system:install --drop-database --basic-setup --force --no-assign-theme"
         ],
         "init:js": [
             "@npm:admin clean-install",
@@ -424,6 +425,5 @@
              "Shopware\\Core\\Profiling\\Test\\": "src/Core/Profiling/Test/",
              "Shopware\\Core\\Test\\": "src/Core/Test/"
         }
-    },
-    "version": "6.4.12.0"
+    }
 }
