--- a/.gitlab/templates/plugin.yml
+++ b/.gitlab/templates/plugin.yml
@@ -64,7 +64,12 @@ variables:
     ADMIN_PERCY_SPEC:
         value: ''
         description: 'Can be used instead of the tagging to define which storefront spec files should be used. Example: "cypress/integration/visual/**/*,cypress/integration/catalogue/**/*"'
-
+    PLUGIN_DEPENDENCIES:
+        value: '[]'
+        description: 'Plugin dependencies. Defined in json. Example: [{ "name": "SwagPayPal", "url": "gitlab.shopware.com/shopware/6/services/paypal", "branch": "master" }]'
+    COMPOSER_DEPENDENCIES:
+        value: '[]'
+        description: 'Additional composer dependencies. Defined in json. Example: ["theiconic/name-parser", "amzn/amazon-pay-api-sdk-php:2.2.1"]'
 
 workflow:
     rules:
@@ -72,6 +77,36 @@ workflow:
         -   if: '$CI_PIPELINE_SOURCE == "push"'
             when: never
         -   when: always
+
+.install_dependencies: &install_dependencies
+  - apt-get update && apt-get install -y jq
+  - |
+    echo "${COMPOSER_DEPENDENCIES}"
+    for package in $(echo "${COMPOSER_DEPENDENCIES}" | jq -r '.[]'); do
+        composer require "${package}"
+    done
+  - |
+    echo "${PLUGIN_DEPENDENCIES}"
+    for plugin64 in $(echo "${PLUGIN_DEPENDENCIES}" | jq -r '.[] | @base64'); do
+        plugin="$(echo $plugin64 | base64 -d)"
+        plugin_name="$(echo "$plugin" | jq -r .name)"
+        plugin_url="$(echo "$plugin" | jq -r .url)"
+        plugin_branch="$(echo "$plugin" | jq -r .branch)"
+        git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@${plugin_url}" --branch "${plugin_branch}" "${PROJECT_ROOT}/custom/plugins/${plugin_name}"
+        npm ci --prefix  "${PROJECT_ROOT}/custom/plugins/${plugin_name}/Resources/app/administration" || true
+        npm ci --prefix  "${PROJECT_ROOT}/custom/plugins/${plugin_name}/src/Resources/app/administration" || true
+        npm ci --prefix  "${PROJECT_ROOT}/custom/plugins/${plugin_name}/Resources/app/storefront" || true
+        npm ci --prefix  "${PROJECT_ROOT}/custom/plugins/${plugin_name}/src/Resources/app/storefront" || true
+    done
+  - bin/console plugin:refresh
+  - |
+    for plugin64 in $(echo "${PLUGIN_DEPENDENCIES}" | jq -r '.[] | @base64'); do
+        plugin="$(echo $plugin64 | base64 -d)"
+        plugin_name="$(echo "$plugin" | jq -r .name)"
+        bin/console plugin:install --activate "${plugin_name}"
+    done
+  - bin/console cache:clear
+  - bin/console plugin:list
 
 default:
     image: $DEV_IMAGE
@@ -101,6 +136,7 @@ default:
             then echo "$PLUGIN_NAME is active";
             else echo "$PLUGIN_NAME is not active"; exit 1;
           fi
+        - *install_dependencies
         - bin/console bundle:dump
         - bin/console assets:install
         # run php as root to prevent permission issues
