--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,8 @@
             <directory suffix=".php">src/Core/System</directory>
             <directory suffix=".php">src/Elasticsearch</directory>
             <directory suffix=".php">src/Core/Migration</directory>
+            <directory suffix=".php">src/Core/Migration</directory>
+            <directory suffix=".php">custom/plugins/SwagCommercial</directory>
             <file>src/Core/Defaults.php</file>
             <file>src/Core/HttpKernel.php</file>
             <file>src/Core/HttpKernelResult.php</file>
@@ -120,10 +122,14 @@
             <directory>src/Docs/Test</directory>
             <directory suffix="example.php">src/Docs/Resources/current/</directory>
         </testsuite>
+        <testsuite name="commercial">
+            <directory>custom/plugins/SwagCommercial</directory>
+        </testsuite>
 
         <testsuite name="paratest">
             <directory>src/Core/*/Test</directory>
             <directory>src/*/Test</directory>
+            <directory>custom/plugins/SwagCommercial</directory>
             <exclude>src/Recovery/Test</exclude>
             <exclude>src/Storefront/Test/Migration</exclude>
             <exclude>src/Core/Migration/Test</exclude>
